# zermelo

./: LICENSE  README.md  pyproject.toml
src/: zermelo.py
