[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[project]
name = "zermelo"
authors = [
  { name="Johannes Becherer", email="johannes.becherer@hereon.de" },
]
description = "Zermelo's problem"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	     "matplotlib",
	     "numpy",
	     "xarray",
	     "pyproj"
]

license = {text = "MIT License"}

# version through setuptools_scm (git)
#dynamic = ["version"]

[project.urls]
#Homepage = "https://github.com/smerckel/ncjson"
#Issues = "https://github.com/smerckel/ncjson/issues"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["zermelo"]

#[tool.setuptools_scm]
#version_scheme = "guess-next-dev"
#local_scheme = "no-local-version"
